[tool.poetry]
name = "pyonhm"
version = "0.1.0"
description = ""
authors = ["Richard McDonald <rmcd@usgs.gov>"]
readme = "README.md"
packages = [
    {include = "pyonhm"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gdptools = "^0.2.7"
pytz = "^2024.1"
xmltodict = "^0.13.0"
cyclopts = "^2.4.2"
docker = "^7.0.0"

[tool.poetry.scripts]
pyonhm = "pyonhm.docker_manager:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
